   - Datapath Linux kernel compatibility.
     * Dropped support for kernel older than 3.10.
     * Removed VLAN splinters feature.
     * Datapath supports kernel upto 4.7.
   - Tunnels:
     * Flow based tunnel match and action can be used for IPv6 address using
       tun_ipv6_src, tun_ipv6_dst fields.
     * Added support for IPv6 tunnels, for details checkout FAQ.
   - A wrapper script, 'ovs-tcpdump', to easily port-mirror an OVS port and
     watch with tcpdump
   - Introduce --no-self-confinement flag that allows daemons to work with
     sockets outside their run directory.
   - ovs-pki: Changed message digest algorithm from SHA-1 to SHA-512 because
     SHA-1 is no longer secure and some operating systems have started to
     disable it in OpenSSL.
   - Add 'mtu_request' column to the Interface table. It can be used to
     configure the MTU of the ports.

Known issues:
   - Using openvswitch module in conjunction with upstream Linux tunnels:
     * When using the openvswitch module distributed with OVS against kernel
       versions 4.4 to 4.6, the openvswitch module cannot be loaded or used at
       the same time as "ip_gre".
   - Conntrack FTP ALGs: When using the openvswitch module distributed with
     OVS, particular Linux distribution kernels versions may provide diminished
     functionality. This typically affects active FTP data connections when
     using "actions=ct(alg=ftp),..." in flow tables. Specifically:
     * Centos 7.1 kernels (3.10.0-2xx) kernels are unable to correctly set
       up expectations for FTP data connections in multiple zones,
       eg "actions=ct(zone=1,alg=ftp),ct(zone=2,alg=ftp),...". Executing the
       "ct" action for subsequent data connections may fail to determine that
       the data connection is "related" to an existing connection.
     * Centos 7.2 kernels (3.10.0-3xx) kernels may not establish FTP ALG state
       correctly for NATed connections. As a result, flows that perform NAT,